update projects section

--- a/resume.tex
+++ b/resume.tex
@@ -263,7 +263,7 @@ urlcolor={blue!80!black}}
 	\profilesection{Working Skills}
 	% Use reverse order (foreach latex...)
 	\skillbar{
-		Work Under Pressure/4,
+		Work Under Pressure/3.85,
 		Team Working/5,
 		Repetitive Tasks/1,
 		Problem Solving/6.25,
@@ -287,13 +287,14 @@ urlcolor={blue!80!black}}
 	\vspace{-\baselineskip}
 	\EduStatement{01/2018}{06/2018}{Norwegian University of Science and Technology}{Exchange Semester - International Profile}{Software Engineering}
 	\vspace{-\baselineskip}
-	\EduStatement{09/2012}{05/2015}{University Laval}{Bachelor Degree}{Actuarial Sciences}\\
+	\EduStatement{09/2012}{05/2015}{University Laval}{Bachelor Degree}{Actuarial Sciences}
+
 	\sectiontitle{Experience}
 	\vspace{-\baselineskip}
 	\begin{ExpStatement}{05/2017}{12/2017}{Desjardins, General Insurance Group}{Database Analyst - Research and Development}
-		\item Bulk extraction from indemnization agent notes using NLP approaches
+		\item Bulk extraction from indemnization agent notes using NLP approaches (Python)
 		\item Documentation generator (similar to \textit{Doxygen}) using \texttt{XSD}, \texttt{XML} and \texttt{XSL} for \texttt{SAS}
-		\item Redesign of the data extraction pipeline used to create fraud models
+		\item Redesign of the data extraction pipeline used to create fraud models (SAS)
 	\end{ExpStatement}
 	\vspace{-1.5\baselineskip}
 	\begin{ExpStatement}{05/2013}{12/2016}{}{Actuarial Analyst - Property Ratemaking}
@@ -311,8 +312,60 @@ urlcolor={blue!80!black}}
 	\end{ExpStatement}
 
 	\sectiontitle{Projects}
-	\vspace{-\baselineskip}
-	\ProjectStatement{CentraLib}{Centralized Bib\TeX\space References Manager}{2017}{Python, Unit Testing, TravisCI, Coverage}{https://github.com/SamuelCabralCruz/centralLib}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{Bombhunt}
+	{Remake of the famous \textit{Bomberman} game}
+	{2018}
+	{Java, Android, LibGDX, ECS, GooglePlay}
+	{https://github.com/SamuelCabralCruz/tdt4240-project}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{Web Security Lab}
+	{Securing unprotected PHP framework}
+	{2018}
+	{PHP, Apache, 2FA, TLS, PWD Storage}
+	{https://github.com/SamuelCabralCruz/ttm4135-project}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{Assignment Template Light}
+	{Paper Redaction Rmarkdown}
+	{2018}
+	{Markdown, R, LaTex, BibTeX, CSL}
+	{https://github.com/SamuelCabralCruz/template-Rmarkdown}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{Jukebox}
+	{Learn playing music using digital instruments}
+	{2017}
+	{Java, Swing, MIDI, Unified Process}
+	{https://github.com/SamuelCabralCruz/Jukebox}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{CentraLib}
+	{Centralized Bib\TeX\space References Manager}
+	{2017}
+	{Python, Unit Testing, TravisCI, Coverage}
+	{https://github.com/SamuelCabralCruz/centralLib}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{SAS Mapper}
+	{Visually analyze SAS script's workflow}
+	{2017}
+	{Python, SAS, Parsing, RegEx, Networkx}
+	{https://github.com/SamuelCabralCruz/SAS-Mapper}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{RaQ2017}
+	{R introduction workshop using OpenFlight}
+	{2017}
+	{R, Tutorial, Leaflet, GIS, Stats}
+	{https://github.com/vigou3/raquebec-atelier-introduction-r/blob/master/caseStudy/statement/LaTeX/OpenFlightsCaseStudy.pdf}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{Assignment Template}
+	{Document class for assignments}
+	{2017}
+	{LaTeX, Efficiency, GLO, ULAVAL, NTNU}
+	{https://github.com/SamuelCabralCruz/Assignment-Template}
+	\vspace{-0.75\baselineskip}
+	\ProjectStatement{CV Template}
+	{\LaTeX\space template for the present resume}
+	{2016}
+	{LaTeX, Tikz, Resume, Template}
+	{https://github.com/SamuelCabralCruz/CV-Template}
 
 	\sectiontitle{Achievements}
 	Participation to Academic Actuarial Competitions - ActuLab
